--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+/* @layer utilities {
+    .no-scrollbar:::-webkit-scrollbar {
+        display: none;
+    }
+} */
+
+*::-webkit-scrollbar {
+    display: none;
+  }
